# immunegate

./: 00_Masterindex.md  CLAUDE.md  CONTRIBUTING.md  ImmuneGate_Konzeptpaket.docx  LICENSE  README.md  _Index.md  immunegate.config.arztpraxis.yaml  immunegate.config.yaml  pyproject.toml  setup.cfg  setup.py  szenario_schule.py  test_immunegate.py
.claude/: launch.json
.github/workflows/: tests.yml
99_Berichte/: 2026-03-07_Sprint10_Entwickler-Erfahrung.md  2026-03-07_Sprint11_Open-Source.md  2026-03-07_Sprint12_Mehr-Interceptoren.md  2026-03-07_Sprint7_Plugin-System.md  2026-03-07_Sprint8_Demo-App.md  2026-03-07_Sprint9_Security-Compliance.md  _Index.md
docs/: config_reference.md  getting_started.md  policy_rules.md
examples/: szenario_arztpraxis.py  szenario_steuerberater.py  szenario_webdesign.py
immunegate/: __init__.py  audit.py  cli.py  config.py  danger_signals.py  gate.py  interceptor.py  owasp.py  plugins.py  policy_engine.py  risk_engine.py  schemas.py  wrapper.py
immunegate_src/: demo.py  gate.py  schemas.py  wrapper.py
plugins/: hallertau_allowlist.py  no_sunday_deletes.py
ui/: approval.html  demo_app.html  scoreboard.html
