[metadata]
name             = immunegate
version          = 0.1.0
description      = Das Immunsystem für KI-Agenten – deterministischer Security & Trust Layer
long_description = file: README.md
long_description_content_type = text/markdown
license          = MIT
license_files    = LICENSE
author           = Bettina Mayerhofer
url              = https://github.com/u6637434908-source/immunegate
python_requires  = >=3.9
keywords         = ai agent security llm prompt-injection access-control audit policy trust
classifiers      =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = False

[options.packages.find]
where    = .
include  = immunegate*
exclude  = tests* ui* docs*

[options.extras_require]
yaml = pyyaml>=6.0
dev  =
    pyyaml>=6.0
    build>=1.0
    twine>=4.0
